--- a/public/test.html
+++ b/public/test.html
@@ -48,6 +48,7 @@
       z-index: 2000;
       max-height: 80vh;
       overflow: auto;
+      width: 700px;
     }
   </style>
 </head>
@@ -59,7 +60,20 @@
   <div id="timeline"></div>
 
   <div id="event-form">
-    <!-- 新增事件内容略 -->
+    <h3>新增事件</h3>
+    <label>事件名称（必填）：<input type="text" id="title"></label><br>
+    <label>事件类型（必填）：<select id="eventType"></select></label><br>
+    <label>开始时间（必填）：<input type="date" id="start"></label><br>
+    <label>结束时间：<input type="date" id="end"></label><br>
+    <label>地区（必填）：<select id="region"></select></label><br>
+    <label>平台类型：<select id="platform"></select></label><br>
+    <label id="consoleLabel" style="display:none">主机类型：<select id="console"></select></label><br>
+    <label>公司：<select id="company"></select></label><br>
+    <label>描述：<br><textarea id="description" rows="4" cols="40"></textarea></label><br>
+    <label>标签（多选）：<select id="tag" multiple></select></label><br>
+    <label>提交者昵称（选填）：<input type="text" id="submitter" maxlength="12" pattern="[\u4e00-\u9fa5\w]{0,12}" title="仅限中文、英文、数字，最多12字节"></label><br>
+    <button onclick="submitEvent()">提交</button>
+    <button onclick="document.getElementById('event-form').style.display='none'">关闭</button>
   </div>
 
   <div id="filter-window">
@@ -119,7 +133,10 @@
         option.textContent = FILTER_ATTRIBUTES[key];
         attrSelect.appendChild(option);
       }
-      attrSelect.addEventListener('change', () => updateFilterValues(true));
+      attrSelect.onchange = () => {
+        if (choicesInstance) choicesInstance.destroy();
+        updateFilterValues(true);
+      };
       updateFilterValues(true);
     }
     function updateFilterValues(reset = false) {
@@ -184,10 +201,54 @@
     fetch(ENDPOINT + '?action=options')
       .then(res => res.json())
       .then(options => {
-        const filterAttr = document.getElementById('filter-attribute');
         for (let key in FILTER_ATTRIBUTES) {
           filterOptions[key] = options[key] || [];
         }
+
+        const fill = (id, list) => {
+          const select = document.getElementById(id);
+          if (!select) return;
+          select.innerHTML = '';
+          list.forEach(opt => {
+            const option = document.createElement("option");
+            option.value = opt;
+            option.textContent = opt;
+            select.appendChild(option);
+          });
+        };
+
+        fill("eventType", options.EventType);
+        fill("region", options.Region);
+        fill("platform", options.Platform);
+        fill("company", options.Company);
+        fill("tag", options.Tag);
+
+        new Choices(document.getElementById("tag"), {
+          removeItemButton: true,
+          placeholderValue: '请选择标签...',
+          searchPlaceholderValue: '搜索标签...',
+          noResultsText: '无匹配标签',
+          maxItemCount: 10
+        });
+
+        document.getElementById("platform").addEventListener("change", function () {
+          const platform = this.value;
+          const consoleOptions = options.ConsolePlatform?.[platform] || [];
+          const consoleSelect = document.getElementById("console");
+          consoleSelect.innerHTML = '';
+
+          if (consoleOptions.length > 0) {
+            document.getElementById("consoleLabel").style.display = 'inline';
+            consoleOptions.forEach(opt => {
+              const option = document.createElement("option");
+              option.value = opt;
+              option.textContent = opt;
+              consoleSelect.appendChild(option);
+            });
+          } else {
+            document.getElementById("consoleLabel").style.display = 'none';
+          }
+        });
       });
   </script>
 </body>
