--- a/public/test.html
+++ b/public/test.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <title>时间轴（匿名模式）</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/locale/zh-cn.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/choices.js@10.2.0/public/assets/scripts/choices.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
   <style>
     #timeline {
       width: 100%;
@@ -104,7 +105,6 @@
 const ENDPOINT = "https://script.google.com/macros/s/AKfycbxcv6GqP5USv3zOn2pepoT3mke2fdZuWsoInq6qkDx-2LUMBQTcJpahOtRqUHqBYMjs/exec";
 let allOptions = {};
 let activeFilters = {};
-let filterOptionsChoices;
 
 moment.locale("zh-cn");
 
@@ -147,17 +147,16 @@ fetch(ENDPOINT + '?action=options')
       });
     };
 
-    fill("事件类型", options.EventType);
-    fill("地区", options.Region);
-    fill("平台类型", options.Platform);
-    fill("公司", options.Company);
+    fill("eventType", options.EventType);
+    fill("region", options.Region);
+    fill("platform", options.Platform);
+    fill("company", options.Company);
+    fill("tag", options.Tag);
 
-    new Choices(document.getElementById("tag"), {
-      removeItemButton: true,
-      placeholderValue: '请选择标签...',
-      searchPlaceholderValue: '搜索标签...',
-      noResultsText: '无匹配标签',
-      maxItemCount: 10
+    $('#tag').select2({
+      width: '100%',
+      placeholder: '请选择标签',
+      allowClear: true
     });
 
     document.getElementById("platform").addEventListener("change", function () {
@@ -179,7 +178,6 @@ fetch(ENDPOINT + '?action=options')
       }
     });
 
-    // 初始化过滤属性下拉
     const attrSelect = document.getElementById("filter-attribute");
     attrSelect.innerHTML = '';
     Object.keys(options).forEach(key => {
@@ -193,7 +191,6 @@ fetch(ENDPOINT + '?action=options')
     attrSelect.dispatchEvent(new Event("change"));
   });
 
-// 监听过滤属性切换并更新多选项
 const attrSelectEl = document.getElementById("filter-attribute");
 attrSelectEl.addEventListener("change", () => {
   const attr = attrSelectEl.value;
@@ -206,15 +203,10 @@ attrSelectEl.addEventListener("change", () => {
     option.textContent = opt;
     select.appendChild(option);
   });
-  if (filterOptionsChoices) filterOptionsChoices.destroy();
-  filterOptionsChoices = new Choices(select, {
-    removeItemButton: true,
-    shouldSort: false,
-    placeholder: true,
-    placeholderValue: '请选择...',
-    searchPlaceholderValue: '搜索选项...',
-    noResultsText: '无匹配项',
-    maxItemCount: 20
+  $('#filter-options').select2({
+    width: '100%',
+    placeholder: '请选择...',
+    allowClear: true
   });
 });
 
@@ -235,7 +227,7 @@ function openAddFilter() {
 
 function confirmAddFilter() {
   const attr = document.getElementById("filter-attribute").value;
-  const selected = Array.from(document.getElementById("filter-options").selectedOptions).map(o => o.value);
+  const selected = $('#filter-options').val();
   if (attr && selected.length) {
     activeFilters[attr] = selected;
     updateFilterList();
