--- a/public/test.html
+++ b/public/test.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
   <title>时间轴（匿名模式）</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" rel="stylesheet" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/locale/zh-cn.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
   <style>
     #timeline {
       width: 100%;
@@ -58,7 +57,6 @@
       width: 700px;
     }
   </style>
-
 </head>
 <body>
   <h2>匿名时间轴编辑器（只读预览）</h2>
@@ -68,21 +66,20 @@
 
   <div id="event-form">
     <h3>新增事件</h3>
-    <label>事件名称（必填）：<input type="text" id="title" autocomplete="off"></label><br>
-    <label>事件类型（必填）：<select id="eventType" autocomplete="off"></select></label><br>
-    <label>开始时间（必填）：<input type="date" id="start" autocomplete="off"></label><br>
-    <label>结束时间：<input type="date" id="end" autocomplete="off"></label><br>
-    <label>地区（必填）：<select id="region" autocomplete="off"></select></label><br>
-    <label>平台类型：<select id="platform" autocomplete="off"></select></label><br>
-    <label id="consoleLabel" style="display:none">主机类型：<select id="console" autocomplete="off"></select></label><br>
-    <label>公司：<select id="company" autocomplete="off"></select></label><br>
-    <label>描述：<br><textarea id="description" rows="4" cols="40" autocomplete="off"></textarea></label><br>
-    <label>标签（多选）：<select id="tag" multiple autocomplete="off"></select></label><br>
-    <label>提交者昵称（选填）：<input type="text" id="submitter" maxlength="12" pattern="[\u4e00-\u9fa5\w]{0,12}" title="仅限中文、英文、数字，最多12字节" autocomplete="off"></label><br>
+    <label>事件名称（必填）：<input type="text" id="title"></label><br>
+    <label>事件类型（必填）：<select id="eventType"></select></label><br>
+    <label>开始时间（必填）：<input type="date" id="start"></label><br>
+    <label>结束时间：<input type="date" id="end"></label><br>
+    <label>地区（必填）：<select id="region"></select></label><br>
+    <label>平台类型：<select id="platform"></select></label><br>
+    <label id="consoleLabel" style="display:none">主机类型：<select id="console"></select></label><br>
+    <label>公司：<select id="company"></select></label><br>
+    <label>描述：<br><textarea id="description" rows="4" cols="40"></textarea></label><br>
+    <label>标签（多选）：<select id="tag" multiple></select></label><br>
+    <label>提交者昵称（选填）：<input type="text" id="submitter" maxlength="12" pattern="[\u4e00-\u9fa5\w]{0,12}" title="仅限中文、英文、数字，最多12字节"></label><br>
     <button onclick="submitEvent()">提交</button>
     <button onclick="document.getElementById('event-form').style.display='none'">关闭</button>
   </div>
-
 
   <div id="filter-window">
     <h3>过滤标准（和逻辑）</h3>
@@ -107,6 +104,7 @@
 const ENDPOINT = "https://script.google.com/macros/s/AKfycbxcv6GqP5USv3zOn2pepoT3mke2fdZuWsoInq6qkDx-2LUMBQTcJpahOtRqUHqBYMjs/exec";
 let allOptions = {};
 let activeFilters = {};
+let filterOptionsChoices;
 
 moment.locale("zh-cn");
 
@@ -149,16 +147,17 @@ fetch(ENDPOINT + '?action=options')
       });
     };
 
-    fill("eventType", options.EventType);
-    fill("region", options.Region);
-    fill("platform", options.Platform);
-    fill("company", options.Company);
-    fill("tag", options.Tag);
+    fill("事件类型", options.EventType);
+    fill("地区", options.Region);
+    fill("平台类型", options.Platform);
+    fill("公司", options.Company);
 
-    $('#tag').select2({
-      width: '100%',
-      placeholder: '请选择标签',
-      allowClear: true
+    new Choices(document.getElementById("tag"), {
+      removeItemButton: true,
+      placeholderValue: '请选择标签...',
+      searchPlaceholderValue: '搜索标签...',
+      noResultsText: '无匹配标签',
+      maxItemCount: 10
     });
 
     document.getElementById("platform").addEventListener("change", function () {
@@ -180,6 +179,7 @@ fetch(ENDPOINT + '?action=options')
       }
     });
 
+    // 初始化过滤属性下拉
     const attrSelect = document.getElementById("filter-attribute");
     attrSelect.innerHTML = '';
     Object.keys(options).forEach(key => {
@@ -193,6 +193,7 @@ fetch(ENDPOINT + '?action=options')
     attrSelect.dispatchEvent(new Event("change"));
   });
 
+// 监听过滤属性切换并更新多选项
 const attrSelectEl = document.getElementById("filter-attribute");
 attrSelectEl.addEventListener("change", () => {
   const attr = attrSelectEl.value;
@@ -205,10 +206,15 @@ attrSelectEl.addEventListener("change", () => {
     option.textContent = opt;
     select.appendChild(option);
   });
-  $('#filter-options').select2({
-    width: '100%',
-    placeholder: '请选择...',
-    allowClear: true
+  if (filterOptionsChoices) filterOptionsChoices.destroy();
+  filterOptionsChoices = new Choices(select, {
+    removeItemButton: true,
+    shouldSort: false,
+    placeholder: true,
+    placeholderValue: '请选择...',
+    searchPlaceholderValue: '搜索选项...',
+    noResultsText: '无匹配项',
+    maxItemCount: 20
   });
 });
 
@@ -229,7 +235,7 @@ function openAddFilter() {
 
 function confirmAddFilter() {
   const attr = document.getElementById("filter-attribute").value;
-  const selected = $('#filter-options').val();
+  const selected = Array.from(document.getElementById("filter-options").selectedOptions).map(o => o.value);
   if (attr && selected.length) {
     activeFilters[attr] = selected;
     updateFilterList();
